# AudioWorkstation

./: CMakeLists.txt  comandi.txt
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h
Source/UI/: FileLoaderComponent.cpp  FileLoaderComponent.h  ModernLookAndFeel.h  SidebarComponent.h  TrackComponent.h  TransportPanel.h
